# notas-musicais

./: README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 02_contribua.md  docs.md  index.md
docs/stylesheets/: extra.css
docs/templates/: instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escalas.py
tests/: __init__.py  test_acordes.py  test_cli.py  test_escala.py
